# Pathplanning

./: README.md
car_drive_control/: CMakeLists.txt  CMakeLists.txt~  car_drive_control.launch  frames.gv  log.cpp  log.cpp~  mainpage.dox
car_drive_control/msg/: motion_command.msg
car_drive_control/msg_gen/cpp/include/car_drive_control/: motion_command.h
car_drive_control/msg_gen/lisp/: _package.lisp  _package_motion_command.lisp  car_drive_control-msg.asd  motion_command.lisp
car_drive_control/src/: auto_car_control.cpp  auto_car_control.cpp~  cloud_assembler.cpp  cloud_assembler.cpp~  midware_test.cpp  midware_test.cpp~
car_drive_control/src/car_drive_control/msg/: __init__.py  _motion_command.py
gazebo_plugin/: CMakeLists.txt  CMakeLists.txt~  VRCPlugin.cpp  VRCPlugin.cpp~  VRCPlugin.h  VRCPlugin.h~  VRCPlugin_ori.cpp  VRCPlugin_ori.cpp~  atlas.urdf  manifest.xml  manifest.xml~  vehicle.cc  vehicle.cc~  vehicle.h  vehicle.h~
gazebo_plugin/built/: CMakeCache.txt  Makefile  cmake_install.cmake
interactive_walk_planner_new/: CMakeLists.txt  CMakeLists.txt~  README.md  mainpage.dox  manifest.xml
interactive_walk_planner_new/action_sets/: actionset10_ls_new.txt  actionset10_ls_new.txt~  actionset10_rs_new.txt  relationship_cost.txt
interactive_walk_planner_new/launch/: interactive_walk_planner.launch  interactive_walk_planner_all.launch  interactive_walk_planner_all.launch~  interactive_walk_planner_calibrate.launch  interactive_walk_planner_ocu.launch  interactive_walk_planner_online.launch  interactive_walk_planner_predesigned.launch  interactive_walk_planner_predesigned.launch~  interactive_walk_planner_slope.launch
interactive_walk_planner_new/msg/: foot_sequence.msg  goal_pose.msg  orientation.msg  replan.msg  task_mode.msg
interactive_walk_planner_new/msg_gen/cpp/include/interactive_walk_planner_new/: foot_sequence.h  goal_pose.h  orientation.h  replan.h  task_mode.h
interactive_walk_planner_new/msg_gen/lisp/: _package.lisp  _package_foot_sequence.lisp  _package_goal_pose.lisp  _package_orientation.lisp  _package_task_mode.lisp  foot_sequence.lisp  goal_pose.lisp  interactive_walk_planner_new-msg.asd  orientation.lisp  replan.lisp  task_mode.lisp
interactive_walk_planner_new/rviz_cfg/: default_walk_plan.rviz
interactive_walk_planner_new/src/: astar.cpp  astar.cpp~  astar.h  astar.h~  cloud_assembler.cpp  cloud_assembler.cpp~  cloud_assembler_ocu.cpp  dirDetector.h  foot_interface.cpp  foot_interface_all.cpp  foot_interface_all.cpp~  foot_interface_nochange.cpp  foot_interface_nochange.cpp~  foot_interface_ocu.cpp  foot_interface_ocu.cpp~  foot_interface_slope.cpp  map_plan.cpp  map_plan_all.cpp  map_plan_all.cpp~  map_plan_ocu.cpp  map_plan_ocu.cpp~  map_plan_online.cpp  map_plan_online.cpp~  map_plan_predesigned_map.cpp  map_plan_predesigned_map.cpp~
interactive_walk_planner_new/src/interactive_walk_planner_new/msg/: __init__.py  _foot_sequence.py  _goal_pose.py  _orientation.py  _replan.py  _task_mode.py
path_plan_predesigned_map/: CMakeLists.txt  CMakeLists.txt~  actionset16_ls.txt  actionset16_rs.txt  actionset4_ls.txt  actionset4_rs.txt  actionset8_ls.txt  actionset8_rs.txt  manifest.xml  manifest.xml~
path_plan_predesigned_map/action_sets/: actionset10_rs_new.txt  actionset10_rs_new.txt~
path_plan_predesigned_map/src/: demo.c  demo.h  path_plan.cpp  path_plan.cpp~
